
[tool.poetry]
name = "tempest_extractor"
version = "1.0.0"
description = "Extractor for Tempest weather stations for Cognite CDF"
authors = ["Greger Wedel <greger.wedel@cognite.com>"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["arrow", "cognite", "dataclasses_json", "requests", "tempest_backfiller", "tempest_client", "tempest_frontfiller", "websocket"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
cognite-extractor-utils = "^6.1.1"
websocket-client = "^1.4.2"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
